--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -30,6 +30,7 @@
             {% endif %}
             <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
             <a href="{{ path('user_index') }}">back to list</a>
+            {{ include('user/_delete_form.html.twig') }}
         </ul>
     </div>
 {% endblock %}
