added new and user_form new methods in user controller, event listener in buildForm and passwordGenerator methods in user type, and user form and new templates

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -29,6 +29,7 @@
                 <li>{{ error }}</li>
                 <a href="{{ path('user_index') }}">back to list</a>
             {% endif %}
+            <a href="{{ path('new_user') }}">Create new</a>
         </ul>
     </div>
 {% endblock %}
